Git Deployment Assignment/force-app/main/default/objects/Manager__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Q A</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>