Git Deployment Assignment/force-app/main/default/objects/Manager__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Managers</relationshipLabel>
    <relationshipName>Managers</relationshipName>
    <type>Lookup</type>
</CustomField>