Git Deployment Assignment/force-app/main/default/objects/Manager__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Managers</relationshipLabel>
    <relationshipName>Managers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>