Git Deployment Assignment/force-app/main/default/objects/Manager__c/validationRules/Provide_email_and_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_email_and_phone</fullName>
    <active>true</active>
    <description>Provide_email_and_phone</description>
    <errorConditionFormula>OR(ISBLANK( Email__c ), ISBLANK( Phone__c ))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>You must fill email and phone before saving</errorMessage>
</ValidationRule>